--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
 name: generate animation
 
 on:
-  # run automatically every 12 hours
+  # run automatically every 24 hours
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *" 
   
-  # allows manually running the job at any time
+  # allows to manually run the job at any time
   workflow_dispatch:
   
-  # run on every push to the main branch
+  # run on every push on the main branch
   push:
     branches:
-      - main
+    - main
 
 jobs:
   generate:
@@ -19,7 +19,7 @@ jobs:
     timeout-minutes: 10
     
     steps:
-      # generates a snake game from a GitHub user's contributions graph, output a SVG animation
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -30,11 +30,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      # push the content of the build directory to the output branch
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
